fix: preview alignment in firefox

--- a/app/stylus/mutants-layout.styl
+++ b/app/stylus/mutants-layout.styl
@@ -962,6 +962,8 @@ html.admin
       .preview
         cursor pointer
         position absolute
+        top -11px
+        right -45px
         display inline-block
         width 34px
         height 34px
@@ -1133,8 +1135,8 @@ html.admin
             display none
             height 33px
             width 122px
-            bottom 14px
-            right -25px
+            bottom 0
+            right -180px
             overflow hidden
           .plus-minus
             display inline
@@ -1179,6 +1181,8 @@ html.admin
           input
             font-size 1.1em
             width 165px
+          .note
+            left 160px
         img
           display block
         select
